--- a/srsran/gnb.yml
+++ b/srsran/gnb.yml
@@ -5,20 +5,20 @@ amf:
 ru_sdr:
   device_driver: uhd                                            # The RF driver name.
   device_args: type=b200,num_recv_frames=64,num_send_frames=64  # Optionally pass arguments to the selected RF driver.
-  clock:                                                        # Specify the clock source used by the RF.
-  sync:                                                         # Specify the sync source used by the RF.
+  clock: external                                               # Specify the clock source used by the RF.
+  sync:                                              # Specify the sync source used by the RF.
   srate: 23.04                                                  # RF sample rate might need to be adjusted according to selected bandwidth.
   otw_format: sc12
   tx_gain: 80                                                   # Transmit gain of the RF might need to adjusted to the given situation.
   rx_gain: 40                                                   # Receive gain of the RF might need to adjusted to the given situation.
 
 cell_cfg:
-  dl_arfcn: 632628                                                # ARFCN of the downlink carrier (center frequency).
+  dl_arfcn: 627340                                                # ARFCN of the downlink carrier (center frequency).
   band: 78                                                        # The NR band.
   channel_bandwidth_MHz: 20                                       # Bandwith in MHz. Number of PRBs will be automatically derived.
   common_scs: 30                                                  # Subcarrier spacing in kHz used for data.
   plmn: "PLMN"                                                    # PLMN broadcasted by the gNB.
-  tac: 1                                                          # Tracking area code (needs to match the core configuration).
+  tac: 7                                                          # Tracking area code (needs to match the core configuration).
   pci: 1                                                          # Physical cell ID.
 
 log:
@@ -26,9 +26,9 @@ log:
   all_level: warning                                              # Logging level applied to all layers.
 
 pcap:
-  mac_enable: false                                               # Set to true to enable MAC-layer PCAPs.
+  mac_enable: true                                               # Set to true to enable MAC-layer PCAPs.
   mac_filename: /mnt/srsran/gnb_mac.pcap                          # Path where the MAC PCAP is stored.
-  ngap_enable: false                                              # Set to true to enable NGAP PCAPs.
+  ngap_enable: true                                              # Set to true to enable NGAP PCAPs.
   ngap_filename: /mnt/srsran/gnb_ngap.pcap                        # Path where the NGAP PCAP is stored.
   f1ap_enable: false                                              # Set to true to enable F1AP PCAPs.
   f1ap_filename: /mnt/srsran/gnb_f1ap.pcap                        # Path where the F1AP PCAP is stored.
