Added MITM container as proxy between gNB and AMF, sniffer.py listens to traffic on NGAP layer, decodes the messages and extracts occurring SUCIs

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ MCC=999
 MNC=70
 
 TEST_NETWORK=172.22.0.0/24
-DOCKER_HOST_IP=192.168.1.135
+DOCKER_HOST_IP=192.168.45.211
 
 # MONGODB
 MONGO_IP=172.22.0.2
@@ -129,6 +129,9 @@ SRS_GNB_IP=172.22.0.37
 
 # GRAFANA
 GRAFANA_IP=172.22.0.39
+
+# MITM
+MITM_IP=172.22.0.40
 
 # UE IPv4 Subnet Range for APN=internet
 UE_IPV4_INTERNET=192.168.100.0/24
