--- a/srsgnb.yaml
+++ b/srsgnb.yaml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   srsgnb:
     image: docker_srsran
@@ -26,5 +25,6 @@ services:
         ipv4_address: ${SRS_GNB_IP}
 networks:
   default:
-    external:
-      name: docker_open5gs_default
+    name: docker_open5gs_default
+    external: true
+      
