--- a/srsran/gnb.yml
+++ b/srsran/gnb.yml
@@ -1,6 +1,7 @@
 amf:
-  addr: AMF_IP                                                    # The address or hostname of the AMF.
-  bind_addr: SRS_GNB_IP                                           # A local IP that the gNB binds to for traffic from the AMF.
+  addr: MITM_IP
+  port: 38412                                              # The address or hostname of the AMF.
+  bind_addr: SRS_GNB_IP                                         # A local IP that the gNB binds to for traffic from the AMF.
 
 ru_sdr:
   device_driver: uhd                                            # The RF driver name.
@@ -18,7 +19,7 @@ cell_cfg:
   channel_bandwidth_MHz: 20                                       # Bandwith in MHz. Number of PRBs will be automatically derived.
   common_scs: 30                                                  # Subcarrier spacing in kHz used for data.
   plmn: "PLMN"                                                    # PLMN broadcasted by the gNB.
-  tac: 7                                                          # Tracking area code (needs to match the core configuration).
+  tac: 1                                                          # Tracking area code (needs to match the core configuration).
   pci: 1                                                          # Physical cell ID.
 
 log:
