Exported MITM, misc. config changes

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -124,7 +124,7 @@ COPY --from=builder /open5gs/webui /open5gs/webui
 COPY --from=builder /open5gs/misc/db /open5gs/misc/db
 
 # Set the working directory to open5gs
-WORKDIR open5gs
+WORKDIR /open5gs
 
 COPY open5gs_init.sh /
 CMD /open5gs_init.sh
