added srsRAN gNB container for bladeRF

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ MCC=999
 MNC=70
 
 TEST_NETWORK=172.22.0.0/24
-DOCKER_HOST_IP=192.168.1.135
+DOCKER_HOST_IP=192.168.1.201
 
 # MONGODB
 MONGO_IP=172.22.0.2
@@ -20,7 +20,7 @@ PCRF_BIND_PORT=3873
 # SGW
 SGWC_IP=172.22.0.5
 SGWU_IP=172.22.0.6
-SGWU_ADVERTISE_IP=172.22.0.6
+SGWU_ADVERTISE_IP=192.168.1.201
 
 # SMF
 SMF_IP=172.22.0.7
@@ -124,14 +124,20 @@ SCP_IP=172.22.0.35
 # METRICS
 METRICS_IP=172.22.0.36
 
-# SRSRAN GNB
-SRS_GNB_IP=172.22.0.37
+# SRSRAN GNB1
+SRS_GNB1_IP=172.22.0.37
+
+# SRSRAN GNB2
+SRS_GNB2_IP=172.22.0.38
 
 # GRAFANA
 GRAFANA_IP=172.22.0.39
 
-# MITM
-MITM_IP=172.22.0.40
+# MITM1
+MITM1_IP=172.22.0.40
+
+# MITM2
+MITM2_IP=172.22.0.41
 
 # UE IPv4 Subnet Range for APN=internet
 UE_IPV4_INTERNET=10.45.0.0/16
