--- a/srslte/ue_5g_zmq.conf
+++ b/srslte/ue_5g_zmq.conf
@@ -43,7 +43,7 @@ srate = 23.04e6
 
 # Example for ZMQ-based operation with TCP transport for I/Q samples
 device_name = zmq
-device_args = tx_port=tcp://SRS_UE_IP:2001,rx_port=tcp://SRS_GNB_IP:2000,id=ue,base_srate=23.04e6
+device_args = tx_port=tcp://SRS_UE_IP:2001,rx_port=tcp://SRS_GNB1_IP:2000,id=ue,base_srate=23.04e6
 
 #####################################################################
 # EUTRA RAT configuration
