--- a/amf/amf.yaml
+++ b/amf/amf.yaml
@@ -36,7 +36,7 @@ amf:
       - plmn_id:
           mcc: MCC
           mnc: MNC
-        tac: 1
+        tac: [1,2]
     plmn_support:
       - plmn_id:
           mcc: MCC
@@ -45,7 +45,7 @@ amf:
           - sst: 1
     security:
         integrity_order : [ NIA2, NIA1, NIA0 ]
-        ciphering_order : [ NEA2, NEA0, NEA1 ]
+        ciphering_order : [ NEA2, NEA1, NEA0 ]
     network_name:
         full: Open5GS
     amf_name: open5gs-amf0
