--- a/srsran/gnb.yml
+++ b/srsran/gnb.yml
@@ -1,5 +1,5 @@
 amf:
-  addr: AMF_IP
+  addr: MITM1_IP
   port: 38412                                              # The address or hostname of the AMF.
   bind_addr: SRS_GNB1_IP                                         # A local IP that the gNB binds to for traffic from the AMF.
 
@@ -14,8 +14,8 @@ ru_sdr:
   sync:                                              # Specify the sync source used by the RF.
   srate: 23.04                                                  # RF sample rate might need to be adjusted according to selected bandwidth.
   otw_format: sc12
-  tx_gain: 80                                                   # Transmit gain of the RF might need to adjusted to the given situation.
-  rx_gain: 40                                                   # Receive gain of the RF might need to adjusted to the given situation.
+  tx_gain: 50                                                   # Transmit gain of the RF might need to adjusted to the given situation.
+  rx_gain: 30                                                   # Receive gain of the RF might need to adjusted to the given situation.
 
 cell_cfg:
   dl_arfcn: 632628                                                # ARFCN of the downlink carrier (center frequency).
