--- a/srsran_bladerf/gnb.yml
+++ b/srsran_bladerf/gnb.yml
@@ -1,10 +1,10 @@
 cu_cp:
   amf:
-    addr: AMF_IP
+    addr: MITM2_IP
     port: 38412                                              # The address or hostname of the AMF.
     bind_addr: SRS_GNB2_IP
     supported_tracking_areas:
-      - tac: 1
+      - tac: 2
         plmn_list:
           - plmn: "PLMN"
             tai_slice_support_list:
@@ -17,7 +17,7 @@ cu_cp:
 ru_sdr:
   device_driver: uhd                                            # The RF driver name.
   device_args: serial=da50ad69a8c1448b9af85e7bb6c5a6f6  # Optionally pass arguments to the selected RF driver.
-  clock:                                              # Specify the clock source used by the RF.
+  clock: internal                                     # Specify the clock source used by the RF.
   sync:                                              # Specify the sync source used by the RF.
   srate: 23.04                                                  # RF sample rate might need to be adjusted according to selected bandwidth.
   otw_format: sc12
@@ -30,8 +30,8 @@ cell_cfg:
   channel_bandwidth_MHz: 20                                       # Bandwith in MHz. Number of PRBs will be automatically derived.
   common_scs: 30                                                  # Subcarrier spacing in kHz used for data.
   plmn: "PLMN"                                                    # PLMN broadcasted by the gNB.
-  tac: 1                                                          # Tracking area code (needs to match the core configuration).
-  pci: 1                                                          # Physical cell ID.
+  tac: 2                                                          # Tracking area code (needs to match the core configuration).
+  pci: 2                                                        # Physical cell ID.
 
 log:
   filename: /mnt/srsran/gnb.log                                   # Path of the log file.
